--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100vh;
+  background: rgb(34, 129, 195);
+  background: linear-gradient(0deg, rgba(34, 129, 195, 1) 0%, rgba(45, 238, 253, 1) 100%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+/* MAIN APP CLASSES */
+.app {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
 }
