--- a/src/components/todolist.css
+++ b/src/components/todolist.css
@@ -13,11 +13,23 @@
 }
 
 .window-body {
-    width: 100%;   
-     padding: 6px;
+    width: 100%;
+    padding: 0 6px 6px;
     box-sizing: border-box;
+    position: relative;
 }
 
+.window-body::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(180deg, #f6f6f6, transparent);
+    z-index: 2;
+
+}
 /* HEADER STYLES */
 .window-header-name {
     text-transform: uppercase;
@@ -27,12 +39,46 @@
     padding: 10px 10px;
     text-align: left;
 }
+
 .window-header-icon {
-margin: 0 8px;
+    margin: 0 8px;
 }
+
+.window-header-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 8px;
+    border: 0;
+    background: none;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+    color: #858585;
+    transition:  0.3s;
+    margin: 8px;
+    padding: 6px 10px;
+    border-radius: 6px;
+    background-color: rgba(0, 0, 0, 0.06);
+}
+
+.window-header-button:focus{
+    outline: 0;
+    box-shadow: 0 0 0px 1px #389738;
+}
+
+.window-header-button svg{
+    margin: 0 0.5em 0 0px;
+}
+
+.window-header-button.enabled{
+    color: #389738
+}
+
 /* TASKS */
 .tasks {
     min-height: 400px;
     max-height: 400px;
     overflow: auto;
 }
+
